--- a/k8s/apps/infra/external-secrets.yaml
+++ b/k8s/apps/infra/external-secrets.yaml
@@ -1,18 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: pipelines
+  name: external-secrets
   namespace: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
-
+    argocd.argoproj.io/sync-wave: "4"
 spec:
   destination:
     name: ''
-    namespace: '*'
+    namespace: 'external-secrets'
     server: 'https://kubernetes.default.svc'
   source:
-    path: k8s/operators/openshift-pipelines/overlays/default
+    path: k8s/operators/external-secrets/overlays/default
     repoURL: 'https://github.com/cnuland/aro-hello-chris-tekton-chains.git'
     targetRevision: HEAD
     directory:
