--- a/k8s/apps/infra/pipelines.yaml
+++ b/k8s/apps/infra/pipelines.yaml
@@ -1,24 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-chris
+  name: pipelines
   namespace: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-wave: "2"
+
 spec:
   destination:
     name: ''
     namespace: '*'
     server: 'https://kubernetes.default.svc'
   source:
-    path: k8s/hello-chris
+    path: k8s/operators/openshift-pipelines/overlays/default
     repoURL: 'https://github.com/cnuland/aro-hello-chris-tekton-chains.git'
     targetRevision: HEAD
     directory:
-      recurse: true
+      recurse: false
   sources: []
   project: default
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
