--- a/hub/k8s/apps/infra/acm.yaml
+++ b/hub/k8s/apps/infra/acm.yaml
@@ -1,16 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-of-apps
+  name: acm
   namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   destination:
     name: ''
-    namespace: 'openshift-gitops'
+    namespace: '*'
     server: 'https://kubernetes.default.svc'
   source:
-    path: k8s/apps
-    repoURL: 'https://github.com/cnuland/aro-hello-chris-tekton-chains.git'
+    path: hub/k8s/operators/acm-operator/overlays/default
+    repoURL: 'https://github.com/cnuland/aro-hello-chris-spoke-hub.git'
     targetRevision: HEAD
     directory:
       recurse: false
